[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ray-on-golem"
version = "0.13.0"
description = "Golem Network integration with Ray"
authors = [
  {name = "Golem Factory", email = "contact@golem.network"}
]
readme = "README.md"
requires-python = ">=3.8.1"

dependencies = [
"ray>=2.9.3",
"requests>=2",
"pydantic<2",
"toml>=0.10.2",
"dpath>=2.1.6",
"appdirs>=1.4.4",
"setuptools>=69.5.1",
"golem-core>=0.7.5",
"aiohttp>=3",
"click>=8",
"tortoise-orm>=0.20.0",
"aerich>=0.7.2",
"prettytable>=3.10.0",
"psutil>=5.9.8",
"yarl>=1.9.4",
"websocat>=1.13.0",
"golem-node>=0.16.0",
"poethepoet>=0.22.0",
"liccheck>=0.9.1",
"black>=23.7.0",
"isort>=5.12.0",
"autoflake>=2.2.0",
"gvmkit-build>=0.3.13",
"yamlpath>=3.8.1",
"pytest-asyncio>=0.23.5.post1",
"factory-boy>=3.3.0",
"colorful>=0.5.4",
]

[project.scripts]
ray-on-golem = "ray_on_golem.main:main"
rog-db = "ray_on_golem.reputation.admin:admin"

# poerty not being used but version.py looks it up here

[tool.poetry] 
name = "ray-on-golem"
version = "0.13.0"
description = "Golem Network integration with Ray"
authors = ["Golem Factory <contact@golem.network>"]
readme = "README.md"
packages = [{include = "ray_on_golem"}]

[tool.isort]
profile = "black"
py_version = 38
skip_gitignore = true
recursive = true
in-place = true
remove-all-unused-imports = true
ignore-init-module-imports = true

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.liccheck]
authorized_licenses = [
  "bsd",
  "new bsd",
  "bsd license",
  "3-Clause BSD",
  "apache 2",
  "apache",
  "Apache Software",
  "Apache Software License",
  "Apache 2.0",
  "MPL-2.0",
  "Mozilla Public License 2.0 (MPL 2.0)",
  "MIT",
  "MIT License",
  "LGPL",
  "LGPL-3.0-or-later",
  "GNU Lesser General Public License v3 or later (LGPLv3+)",
  "GNU Lesser General Public License v3 (LGPLv3)",
  "GNU General Public License v3 (GPLv3)",
  "GNU Library or Lesser General Public License (LGPL)",
  "Python Software Foundation",
  "ISC",
  "ISC License (ISCL)",
  "The Unlicense (Unlicense)",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
